# asteroid-shopper

./: CMakeLists.txt  README.md  asteroid-shopper.desktop.template
i18n/: asteroid-shopper.desktop.h
recipe/: asteroid-shopper.bb
src/: CMakeLists.txt  FileHelper.cpp  FileHelper.h  main.cpp  main.qml
